--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,17 @@
 }
 
 
+@book{Gromov:1999a,
+  address   = {Boston, MA},
+  author    = {Gromov, Misha},
+  publisher = {Birkh{\"a}user Boston Inc.},
+  series    = {Progress in Mathematics},
+  title     = {Metric structures for {R}iemannian and non-{R}iemannian spaces},
+  volume    = {152},
+  year      = {1999}
+}
+
+
 @book{jech2003a,
   address   = {Berlin},
   author    = {Jech, Thomas},
@@ -19,4 +30,36 @@
   series    = {Springer Monographs in Mathematics},
   title     = {Set Theory},
   year      = {2003}
+}
+
+
+@article{Kechris-Pestov-Todorcevic:2005a,
+  author  = {Kechris, A. S. and Pestov, V. G. and Todorcevic, S.},
+  journal = {Geometric And Functional Analysis},
+  number  = {1},
+  pages   = {106--189},
+  title   = {{Fra{\"\i}ss{\'e} Limits, Ramsey Theory, and topological dynamics of automorphism groups}},
+  volume  = {15},
+  year    = {2005}
+}
+
+
+@article{Macpherson:2011a,
+  author  = {Macpherson, Dugald},
+  journal = {Discrete Mathematics},
+  number  = {15},
+  pages   = {1599--1634},
+  title   = {A survey of homogeneous structures},
+  volume  = {311},
+  year    = {2011}
+}
+
+
+@article{Urysohn:1927a,
+  author  = {Urysohn, P.},
+  journal = {Bull. Sci. Math.},
+  pages   = {1-38},
+  title   = {{Sur un espace m{\'e}trique universel. I, II.}},
+  volume  = {51},
+  year    = {1927}
 }
