some typos in <subsets>; started <measures>

--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,14 @@
 }
 
 
+@book{Halmos:1950a,
+  author    = {Halmos, Paul R.},
+  publisher = {Van Nostrand},
+  title     = {Measure {T}heory},
+  year      = {1950}
+}
+
+
 @book{jech2003a,
   address   = {Berlin},
   author    = {Jech, Thomas},
