--- a/references.bib
+++ b/references.bib
@@ -63,6 +63,15 @@
 }
 
 
+@book{RoydenFitzpatrick_1988n,
+  author    = {Royden, Halsey Lawrence and Fitzpatrick, Patrick},
+  publisher = {Macmillan New York},
+  title     = {Real analysis},
+  volume    = {32},
+  year      = {1988}
+}
+
+
 @article{Urysohn:1927a,
   author  = {Urysohn, P.},
   journal = {Bull. Sci. Math.},
