axiom of choice

--- a/references.bib
+++ b/references.bib
@@ -72,6 +72,14 @@
 }
 
 
+@article{Solovay:1970a,
+  author  = {Solovay, RM},
+  journal = {The Annals of Mathematics},
+  title   = {{A model of set-theory in which every set of reals is Lebesgue measurable}},
+  year    = {1970}
+}
+
+
 @article{Urysohn:1927a,
   author  = {Urysohn, P.},
   journal = {Bull. Sci. Math.},
