images of Borel sets

--- a/references.bib
+++ b/references.bib
@@ -41,6 +41,15 @@
 }
 
 
+
+@book{Kechris:1995a,
+  author    = {Kechris, Alexander S.},
+  publisher = {Springer},
+  title     = {Classical Descriptive Set Theory},
+  year      = {1995}
+}
+
+
 @article{Kechris-Pestov-Todorcevic:2005a,
   author  = {Kechris, A. S. and Pestov, V. G. and Todorcevic, S.},
   journal = {Geometric And Functional Analysis},
