added ZFC (start)

--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,17 @@
 }
 
 
+@article{Cantor_1895s,
+  author  = {Cantor, Georg},
+  journal = {Mathematische Annalen},
+  number  = {4},
+  pages   = {481--512},
+  title   = {Beitr{\"a}ge zur Begr{\"u}ndung der transfiniten Mengenlehre},
+  volume  = {46},
+  year    = {1895}
+}
+
+
 @book{Gromov:1999a,
   address   = {Boston, MA},
   author    = {Gromov, Misha},
