added V=L implies AC

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+
+@article{Ackermann:1937a,
+  author  = {Ackermann, Wilhelm},
+  journal = {Mathematische Annalen},
+  number  = {1},
+  pages   = {305-315},
+  title   = {Die Widerspruchsfreiheit der allgemeinen Mengenlehre},
+  volume  = {114},
+  year    = {1937}
+}
+
+
 @article{Cantor_1884b,
   author  = {Cantor, Georg},
   journal = {Acta Mathematica},
