--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,17 @@
 }
 
 
+
+@book{Devlin:1984a,
+  address   = {Berlin},
+  author    = {Devlin, Keith J.},
+  publisher = {Springer-Verlag},
+  series    = {Perspectives in Mathematical Logic},
+  title     = {Constructibility},
+  year      = {1984}
+}
+
+
 @book{Gromov:1999a,
   address   = {Boston, MA},
   author    = {Gromov, Misha},
@@ -63,8 +74,6 @@
   year      = {2003}
 }
 
-
-
 @book{Kechris:1995a,
   author    = {Kechris, Alexander S.},
   publisher = {Springer},
@@ -92,6 +101,17 @@
   title   = {A survey of homogeneous structures},
   volume  = {311},
   year    = {2011}
+}
+
+
+
+@incollection{Mathias_2006m,
+  author    = {Mathias, Adrian RD},
+  booktitle = {Set Theory},
+  pages     = {149--224},
+  publisher = {Springer},
+  title     = {Weak systems of Gandy, Jensen and Devlin},
+  year      = {2006}
 }
 
 
