fixes; added Mansfield-Solovay

--- a/references.bib
+++ b/references.bib
@@ -116,6 +116,15 @@
 
 
 
+@book{Mansfield-Weitkamp:1985a,
+  author    = {Mansfield, Richard and Weitkamp, Galen},
+  publisher = {Oxford University Press and Clarendon Press},
+  series    = {Oxford logic guides},
+  title     = {Recursive aspects of descriptive set theory},
+  year      = {1985}
+}
+
+
 @incollection{Mathias_2006m,
   author    = {Mathias, Adrian RD},
   booktitle = {Set Theory},
