fixes and improvements

--- a/references.bib
+++ b/references.bib
@@ -98,7 +98,7 @@
   journal = {Geometric And Functional Analysis},
   number  = {1},
   pages   = {106--189},
-  title   = {{Fra{\"\i}ss{\'e} Limits, Ramsey Theory, and topological dynamics of automorphism groups}},
+  title   = {{Fraïssé} Limits, Ramsey Theory, and topological dynamics of automorphism groups},
   volume  = {15},
   year    = {2005}
 }
